fixed nav li a overflow

--- a/src/herobase/static/less/style.less
+++ b/src/herobase/static/less/style.less
@@ -146,6 +146,7 @@ html, body {
     text-align: center;
     li {
       > a {
+        overflow: hidden;
         display: inline-block;
         padding: 5px 8px;
         &:hover,
